@@ -24,6 +24,7 @@ use Gibbon\Tables\DataTable;
 use Gibbon\Tables\View\GridView;
 use Gibbon\Domain\Staff\StaffDutyGateway;
 use Gibbon\Forms\Form;
+use Gibbon\Domain\System\SettingGateway;
 
 if (isActionAccessible($guid, $connection2, '/modules/Staff/staff_duty_edit.php') == false) {
     // Access denied
@@ -35,6 +36,8 @@ if (isActionAccessible($guid, $connection2, '/modules/Staff/staff_duty_edit.php'
         ->add(__('Edit Duty Schedule'));
     
     $staffDutyGateway = $container->get(StaffDutyGateway::class);
+    $settingGateway = $container->get(SettingGateway::class);
+    $types = $settingGateway->getSettingByScope('Staff', 'staffDutyTypes');
     
     // FORM
     $form = Form::create('dutyEdit', $session->get('absoluteURL').'/modules/Staff/staff_duty_editProcess.php');
@@ -67,6 +70,9 @@ if (isActionAccessible($guid, $connection2, '/modules/Staff/staff_duty_edit.php'
                 ->chainedTo('timeStart');
 
         $row = $blockTemplate->addRow();
+            $row->addLabel('type', __('Type'));
+                $row->addSelect('type')->fromString($types);
+
             $row->addLabel('gibbonDaysOfWeekIDList', __('Weekday'));
             $row->addCheckbox('gibbonDaysOfWeekIDList')
                 ->fromQuery($pdo, $sqlWeekdays)
